# rhea

./: .gitignore  README-CCS26  README.md  pyproject.toml  requirements.txt  samples.txt
.github/workflows/: ci.yml
configs/: persim.yaml
input/: trusted_manifest.csv  trusted_manifest_media.csv
plots/: CBD_vs_FAD-detection_rates-bytes512_skip_varied.csv  CBD_vs_FAD-detection_rates-bytes_varied_skip128.csv  CBD_vs_FAD-omission_rates-bytes512_skip_varied.csv  CBD_vs_FAD-omission_rates-bytes_varied_skip128.csv  bytes_varied_skip128-docx_only_data.csv  bytes_varied_skip128-pdf_only_data.csv  bytes_varied_skip128-txt_only_data.csv  bytes_varied_skip128-zip_only_data.csv  fav_detection_limit_lt64_skip128.csv  plot_CBD_vs_FAD-detection_rates-bytes512_skip_varied.py  plot_CBD_vs_FAD-detection_rates-bytes_varied_skip128.py  plot_CBD_vs_FAD-omission_rates-bytes512_skip_varied.py  plot_CBD_vs_FAD-omission_rates-bytes_varied_skip128.py  plot_CBD_vs_FAV-detection_rates-bytes_varied_skip128-cli.py  plot_fav_limit.py
sample_data/: Data.docx
sample_data2-txt_only/: LBNL-seismic-event-locations.txt  LakeCounty_Health_3833513227459361734.txt  Power_Plant_1886504500531747391.txt  bd-010123.txt  bd010125.txt  bd050922.txt  file_list_turfgrass.txt  incomes_Neighborhoods_1391785364743206676.txt  status.txt
src/detector/: __init__.py  delta_extract.py  delta_types.py  detect.py  ntfs_b2fm.py  sawa.py
src/postprocessor/: postprocess.py
src/preprocessor/: convert.py  database.py  preprocess.py
src/restorer/: restore.py
src/utils/: build_trusted_manifest.py  pdf_partition.py  (+6 more)
(+26 files in other folders)
